--- a/frontend/src/template/custom.css
+++ b/frontend/src/template/custom.css
@@ -12,5 +12,13 @@
 }
 
 .todoForm {
-  padding-bottom: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  padding-bottom: 15px;
+}
+
+.form-control {
+  width: 100%;
 }
